# rust-sgx-sdk

./: gelsgx.sh  start_aesm_service.sh
samplecode/dataplatform-sgx/: .gitignore  Readme.md  payment_b2b.html
samplecode/dataplatform-sgx/dev_script/: sgx_docker.sh  start_aesm_service.sh
samplecode/dataplatform-sgx/logger/: Makefile
samplecode/dataplatform-sgx/logger/enclave/: Cargo.toml
samplecode/dataplatform-sgx/sgx-client-java/: .gitignore  build.gradle  settings.gradle
samplecode/dataplatform-sgx/sgx-client-java/framework/: build.gradle  settings.gradle
samplecode/dataplatform-sgx/sgx-client-java/sgx-client/: build.gradle
samplecode/dataplatform-sgx/sgx-proxy-java/: .gitignore  build.gradle  settings.gradle
samplecode/dataplatform-sgx/sgx-proxy-java/framework/: .gitignore  settings.gradle
samplecode/dataplatform-sgx/sgx-proxy-java/sgx-proxy/: build.gradle
samplecode/dataplatform-sgx/sgx-server/: Makefile
samplecode/dataplatform-sgx/sgx-server-mio/: .gitignore  Makefile
samplecode/dataplatform-sgx/sgx-server-mio/app/: Cargo.toml  build.rs
samplecode/dataplatform-sgx/sgx-server-mio/app/src/: app_config.rs  main.rs  ocall_intel.rs  ocall_net.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/: Cargo.toml  Enclave.edl  Makefile
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/: config.rs  lib.rs  logger.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/client/: mod.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/service/: config.rs  handler.rs  mod.rs  response.rs  tlsserver.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/service/bill/: mod.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/service/order/: dto.rs  mod.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/service/project/: dto.rs  mod.rs  project_asset.rs  project_bill.rs  project_bill_payment.rs  project_ledger.rs  project_receipt.rs  project_utils.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/service/transaction/: bill.rs  dto.rs  mod.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/utils/: file.rs  mod.rs  time.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/utils/certauth/: mod.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/utils/channel/: mod.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/utils/channel/unionpay/: mod.rs  sdkconstants.rs  sdkutil.rs  sdkutils.rs  signutil.rs
samplecode/dataplatform-sgx/sgx-server-mio/enclave/src/utils/db/: mod.rs
samplecode/dataplatform-sgx/sgx-server/app/: Cargo.toml  build.rs
samplecode/dataplatform-sgx/sgx-server/enclave/: Cargo.toml  Enclave.edl  Makefile
samplecode/hello-sqlite3/: Makefile
samplecode/logger/enclave/: Cargo.toml
samplecode/mio-ra/: README.md
samplecode/mio-ra/mio-ra-client-java/: pom.xml
samplecode/mio-ra/mio-ra-server/: Makefile
samplecode/stabilitytest/mio-ra-server/: Makefile
samplecode/ue-ra/ue-ra-client-java/: .gitignore
sgx_db/sqlite3/: build.sh
(+182 files in other folders)
