[package]
name = "Loggerenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "loggerenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { path = "../../../../sgx_types" }
sgx_tstd    = { path = "../../../../sgx_tstd", features = ["net"] }

[dependencies]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
