[package]
name = "app"
version = "1.0.0"
authors = ["Energy"]
build = "build.rs"

[dependencies]
sgx_types = { path = "../../../../sgx_types" }
sgx_urts  = { path = "../../../../sgx_urts" }
dirs = "1.0.2"
log = "0.4"
env_logger = "0.6.2"
chrono = "0.4"
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"
toml = "0.5.3"